--- a/.github/workflows/all-packages.yaml
+++ b/.github/workflows/all-packages.yaml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions: write-all
     container:
-      image: "docker.io/11notes/alpine:latest"
+      image: "alpine:latest"
       options: --privileged
 
     steps:
