--- a/.github/workflows/all-packages.yaml
+++ b/.github/workflows/all-packages.yaml
@@ -42,6 +42,8 @@ jobs:
 
       - name: Download latest AliceLinux
         run: |
+          set -x
+          
           apk update
           apk upgrade
           apk add curl
