--- a/.github/workflows/all-packages.yaml
+++ b/.github/workflows/all-packages.yaml
@@ -90,7 +90,7 @@ jobs:
       - name: Copy package files
         run: |
           mkdir -p ${{ github.workspace }}/packages
-          cp /alice/var/cache/pkg/*.spm ${{ github.workspace }}/packages/
+          cp ./alice/var/cache/pkg/*.spm ${{ github.workspace }}/packages/
 
       - name: Upload package artifacts
         uses: actions/upload-artifact@v4
