--- a/.github/workflows/all-packages.yaml
+++ b/.github/workflows/all-packages.yaml
@@ -80,11 +80,11 @@ jobs:
           
           # Run required commands
           apkg-reposync
-          apkg -U
-          apkg -I meson cmake pkgconf libtool automake perl ccache #mimalloc
+          apkg -U || true
+          apkg -I meson cmake pkgconf libtool automake perl ccache || true
           #echo 'export CFLAGS="-O2 -march=x86_64 -lmimalloc"' >> /etc/apkg.conf
-          apkg -I $(apkg -a)
-          apkg-clean
+          apkg -I $(apkg -a) || true
+          apkg-clean || true
           EOF
 
       - name: Copy package files
