--- a/.github/workflows/all-packages2.yaml
+++ b/.github/workflows/all-packages2.yaml
@@ -1,22 +1,18 @@
-name: Build and Release all packages in the repo - 2
+name: Build and Release Packages
 
 on:
   schedule:
     - cron: '0 0 * * 0'
   workflow_dispatch:
     inputs:
-      script_pattern:
-        description: "Pattern to match scripts to build (leave empty to build all)"
-        required: false
-        default: ""
       release:
-        description: "Create a release (true/false)"
+        description: "Create a release (true/false)" # If false, publish artifacts only.
         required: false
         default: "true"
 
 jobs:
-  build:
-    name: Set up rootfs and build packages
+  build-and-release:
+    name: Build and Release Packages
     runs-on: ubuntu-latest
     permissions: write-all
     container:
@@ -24,7 +20,7 @@ jobs:
       options: --privileged
 
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
       - name: Generate TAG_NAME
@@ -34,41 +30,45 @@ jobs:
           echo "$TAG_NAME" > tag_name.txt
           echo "TAG_NAME=${TAG_NAME}" >> $GITHUB_ENV
 
-      - name: Upload TAG_NAME artifact
+      - name: Upload TAG_NAME Artifact
         uses: actions/upload-artifact@v4
         with:
           name: tag-name
           path: tag_name.txt
 
-      - name: Download latest AliceLinux
+      - name: Download Latest AliceLinux
         run: |
-          set -eux
+          set -x
           apk update
-          apk add curl tar wget
-          
-          LATEST_TAG=$(curl -s https://codeberg.org/api/v1/repos/emmett1/alicelinux/releases/latest | jq -r '.tag_name')
-          mkdir ./alice
-          wget -qO- "https://codeberg.org/emmett1/alicelinux/releases/download/${LATEST_TAG}/alicelinux-rootfs-${LATEST_TAG}.tar.xz" | tar -xJ -C ./alice
+          apk upgrade
+          apk add curl tar
 
-      - name: Chroot and Build Packages
-        run: |
-          set -eux
-          ./alice/usr/bin/apkg-chroot ./alice sh << 'EOF'
+          # Get the latest release tag from Codeberg
+          LATEST_TAG=$(curl -s https://codeberg.org/api/v1/repos/emmett1/alicelinux/releases/latest | grep -o '"tag_name":"[^"]*' | cut -d'"' -f4)
+
+          mkdir ./alice
+          wget -qO- "https://codeberg.org/emmett1/alicelinux/releases/download/${LATEST_TAG}/alicelinux-rootfs-${LATEST_TAG}.tar.xz" | tar xJvf - -C ./alice
+
+          # Enter chroot and perform operations
+          ./alice/usr/bin/apkg-chroot ./alice sh -s <<'EOF'
           echo "Welcome to AliceLinux"
-          
-          # Setup
+
+          # Set up repositories
           git clone --depth=1 https://codeberg.org/emmett1/alicelinux /var/lib/alicelinux
           mkdir -p /var/cache/pkg /var/cache/src /var/cache/work
-          
-          cat <<CONFIG >> /etc/apkg.conf
-          export CFLAGS="-O2 -march=x86-64-v3 -pipe"
-          export MAKEFLAGS="-j$(nproc)"
-          APKG_PACKAGE_DIR=/var/cache/pkg
-          APKG_SOURCE_DIR=/var/cache/src
-          APKG_WORK_DIR=/var/cache/work
-          CONFIG
-          
+
+          echo 'export CFLAGS="-O2 -march=x86-64-v3 -pipe"' >> /etc/apkg.conf
+          echo 'export CXXFLAGS="$CFLAGS"' >> /etc/apkg.conf
+          echo 'export MAKEFLAGS="-j$(nproc)"' >> /etc/apkg.conf
+          echo 'export NINJAJOBS="$(nproc)"' >> /etc/apkg.conf
+          echo 'APKG_REPO="/var/lib/alicelinux/repos/core /var/lib/alicelinux/repos/extra /var/lib/alicelinux/repos/wayland /var/lib/alicelinux/repos/xorg"' >> /etc/apkg.conf
+          echo 'APKG_PACKAGE_DIR=/var/cache/pkg' >> /etc/apkg.conf
+          echo 'APKG_SOURCE_DIR=/var/cache/src' >> /etc/apkg.conf
+          echo 'APKG_WORK_DIR=/var/cache/work' >> /etc/apkg.conf
+
+          echo "xplshn/alicelinux-bin" > /etc/hostname
           export APKG_NOPROMPT=1
+
           apkg-reposync
           apkg -U || true
           apkg -I meson cmake pkgconf libtool automake perl ccache || true
@@ -76,59 +76,27 @@ jobs:
           apkg-clean || true
           EOF
 
-      - name: Copy package files
+      - name: Create and Save Rootfs Tarball
+        run: |
+          tar -cJf alicelinux-rootfs-${{ env.TAG_NAME }}.tar.xz -C ./alice .
+          mkdir -p ${{ github.workspace }}/artifacts
+          mv alicelinux-rootfs-${{ env.TAG_NAME }}.tar.xz ${{ github.workspace }}/artifacts/
+
+      - name: Copy Package Files
         run: |
           mkdir -p ${{ github.workspace }}/packages
           cp ./alice/var/cache/pkg/*.spm ${{ github.workspace }}/packages/
 
-      - name: Upload package artifacts
+      - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: packages
-          path: ${{ github.workspace }}/packages/*.spm
+          name: build-artifacts
+          path: |
+            ${{ github.workspace }}/artifacts/alicelinux-rootfs-${{ env.TAG_NAME }}.tar.xz
+            ${{ github.workspace }}/packages/*.spm
 
-  release:
-    name: Release Packages
-    runs-on: ubuntu-latest
-    needs: build
-    permissions: write-all
-    if: ${{ github.event.inputs.release == 'true' }}
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Download package artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: packages
-          path: ${{ github.workspace }}/packages
-
-      - name: Download TAG_NAME artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: tag-name
-
-      - name: Read TAG_NAME
-        id: get_tag_name
-        run: |
-          TAG_NAME=$(cat tag_name.txt)
-          echo "TAG_NAME=${TAG_NAME}" >> $GITHUB_ENV
-
-      - name: Manage Tags
-        run: |
-          git fetch --tags
-          TAGS=$(git tag | grep -v "^latest$" | sort -V)
-          TAG_COUNT=$(echo "$TAGS" | wc -l)
-          if [ "$TAG_COUNT" -gt 5 ]; then
-            TAGS_TO_DELETE=$(echo "$TAGS" | head -n -5)
-            for TAG in $TAGS_TO_DELETE; do
-              git tag -d "$TAG"
-              git push origin --delete "$TAG"
-            done
-          fi
-
-      - name: Create Release
+      - name: Create Release (if enabled)
+        if: ${{ github.event.inputs.release == 'true' }}
         uses: softprops/action-gh-release@v2.0.8
         with:
           name: "Package Release - ${{ env.TAG_NAME }}"
@@ -138,4 +106,5 @@ jobs:
           generate_release_notes: false
           make_latest: true
           files: |
+            ${{ github.workspace }}/artifacts/alicelinux-rootfs-${{ env.TAG_NAME }}.tar.xz
             ${{ github.workspace }}/packages/*.spm
