--- a/.github/workflows/all-packages2.yaml
+++ b/.github/workflows/all-packages2.yaml
@@ -1,4 +1,4 @@
-name: Build and Release Packages
+name: Build and Release all packages in the repo
 
 on:
   schedule:
@@ -6,13 +6,13 @@ on:
   workflow_dispatch:
     inputs:
       release:
-        description: "Create a release (true/false)" # If false, publish artifacts only.
+        description: "Create a release (true/false)" # IF DISABLED, PUBLISH ./alice as artifact, do not make a release nor publish the *.spm files.
         required: false
         default: "true"
 
 jobs:
-  build-and-release:
-    name: Build and Release Packages
+  build:
+    name: Set up rootfs
     runs-on: ubuntu-latest
     permissions: write-all
     container:
@@ -20,7 +20,7 @@ jobs:
       options: --privileged
 
     steps:
-      - name: Checkout Repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Generate TAG_NAME
@@ -30,32 +30,35 @@ jobs:
           echo "$TAG_NAME" > tag_name.txt
           echo "TAG_NAME=${TAG_NAME}" >> $GITHUB_ENV
 
-      - name: Upload TAG_NAME Artifact
+      - name: Upload TAG_NAME artifact
         uses: actions/upload-artifact@v4
         with:
           name: tag-name
           path: tag_name.txt
 
-      - name: Download Latest AliceLinux
+      - name: Download latest AliceLinux
         run: |
           set -x
+
           apk update
           apk upgrade
-          apk add curl tar
+          apk add curl
 
           # Get the latest release tag from Codeberg
-          LATEST_TAG=$(curl -s https://codeberg.org/api/v1/repos/emmett1/alicelinux/releases/latest | grep -o '"tag_name":"[^"]*' | cut -d'"' -f4)
+          LATEST_TAG="$(curl -s https://codeberg.org/api/v1/repos/emmett1/alicelinux/releases/latest | grep -o '"tag_name":"[^"]*' | cut -d'"' -f4)"
 
           mkdir ./alice
           wget -qO- "https://codeberg.org/emmett1/alicelinux/releases/download/${LATEST_TAG}/alicelinux-rootfs-${LATEST_TAG}.tar.xz" | tar xJvf - -C ./alice
 
-          # Enter chroot and perform operations
+          # Enter chroot and perform required operations
           ./alice/usr/bin/apkg-chroot ./alice sh -s <<'EOF'
           echo "Welcome to AliceLinux"
 
           # Set up repositories
           git clone --depth=1 https://codeberg.org/emmett1/alicelinux /var/lib/alicelinux
-          mkdir -p /var/cache/pkg /var/cache/src /var/cache/work
+          mkdir -p /var/cache/pkg
+          mkdir -p /var/cache/src
+          mkdir -p /var/cache/work
 
           echo 'export CFLAGS="-O2 -march=x86-64-v3 -pipe"' >> /etc/apkg.conf
           echo 'export CXXFLAGS="$CFLAGS"' >> /etc/apkg.conf
@@ -67,35 +70,65 @@ jobs:
           echo 'APKG_WORK_DIR=/var/cache/work' >> /etc/apkg.conf
 
           echo "xplshn/alicelinux-bin" > /etc/hostname
+
+          # Enter non-interactive mode
           export APKG_NOPROMPT=1
 
+          # Run required commands
           apkg-reposync
           apkg -U || true
           apkg -I meson cmake pkgconf libtool automake perl ccache || true
+          #echo 'export CFLAGS="-O2 -march=x86_64 -lmimalloc"' >> /etc/apkg.conf
           apkg -I $(apkg -s) || true
           apkg-clean || true
           EOF
 
-      - name: Create and Save Rootfs Tarball
-        run: |
-          tar -cJf alicelinux-rootfs-${{ env.TAG_NAME }}.tar.xz -C ./alice .
-          mkdir -p ${{ github.workspace }}/artifacts
-          mv alicelinux-rootfs-${{ env.TAG_NAME }}.tar.xz ${{ github.workspace }}/artifacts/
-
-      - name: Copy Package Files
+      - name: Copy package files
         run: |
           mkdir -p ${{ github.workspace }}/packages
           cp ./alice/var/cache/pkg/*.spm ${{ github.workspace }}/packages/
 
-      - name: Upload Artifacts
+      - name: Create .tar.xz of chroot
+        run: |
+          tar -cJf ${{ github.workspace }}/alice-rootfs-${{ env.TAG_NAME }}.tar.xz -C ./alice .
+
+      - name: Upload package artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: build-artifacts
-          path: |
-            ${{ github.workspace }}/artifacts/alicelinux-rootfs-${{ env.TAG_NAME }}.tar.xz
-            ${{ github.workspace }}/packages/*.spm
+          name: packages
+          path: ${{ github.workspace }}/packages/*.spm
 
-      - name: Create Release (if enabled)
+      - name: Upload .tar.xz artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: alice-rootfs
+          path: ${{ github.workspace }}/alice-rootfs-${{ env.TAG_NAME }}.tar.xz
+
+      - name: Download TAG_NAME artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: tag-name
+
+      - name: Read TAG_NAME
+        id: get_tag_name
+        run: |
+          TAG_NAME=$(cat tag_name.txt)
+          echo "TAG_NAME=${TAG_NAME}" >> $GITHUB_ENV
+
+      - name: Manage Tags
+        run: |
+          git fetch --tags
+          TAGS=$(git tag | grep -v "^latest$" | sort -V)
+          TAG_COUNT=$(echo "$TAGS" | wc -l)
+          if [ "$TAG_COUNT" -gt 5 ]; then
+            TAGS_TO_DELETE=$(echo "$TAGS" | head -n -5)
+            for TAG in $TAGS_TO_DELETE; do
+              git tag -d "$TAG"
+              git push origin --delete "$TAG"
+            done
+          fi
+
+      - name: Create Release
         if: ${{ github.event.inputs.release == 'true' }}
         uses: softprops/action-gh-release@v2.0.8
         with:
@@ -106,5 +139,5 @@ jobs:
           generate_release_notes: false
           make_latest: true
           files: |
-            ${{ github.workspace }}/artifacts/alicelinux-rootfs-${{ env.TAG_NAME }}.tar.xz
             ${{ github.workspace }}/packages/*.spm
+            ${{ github.workspace }}/alice-rootfs-${{ env.TAG_NAME }}.tar.xz
