--- a/.github/workflows/all-packages2.yaml
+++ b/.github/workflows/all-packages2.yaml
@@ -71,7 +71,7 @@ jobs:
           
           # Move packages to workspace
           mkdir -p ${{ github.workspace }}/packages
-          cp ./alice/var/cache/pkg/*.spm ${{ github.workspace }}/packages
+          cp ./alice/var/cache/pkg/* ${{ github.workspace }}/packages
 
       - name: Verify Package Files
         run: |
@@ -85,7 +85,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: packages
-          path: ${{ github.workspace }}/packages/*.spm
+          path: ${{ github.workspace }}/packages/*
 
       - name: Create Release
         if: ${{ github.event.inputs.release == 'true' }}
@@ -98,4 +98,4 @@ jobs:
           generate_release_notes: false
           make_latest: true
           files: |
-            ${{ github.workspace }}/packages/*.spm
+            ${{ github.workspace }}/packages/*
